# simplewebsites

./: 404.html  Makefile  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  webguide.code-workspace
docs/: index.md
docs/stacks/: backend.md  frontend.md  index.md
docs/stylesheets/: extra.css
search/: search_index.json
stacks/: index.html
stacks/backend/: index.html
stacks/frontend/: index.html
stylesheets/: extra.css
